# cmake_playground

./: .gitignore
dynamic_polymorphism/: CMakeLists.txt
dynamic_polymorphism/include/: polygon.h  rectangle.h  triangle.h
dynamic_polymorphism/src/: main.cpp  rectangle.cpp  trinagle.cpp
hello_cmake/: CMakeLists.txt  hello.cpp
static_analysis/: .clang-format  CMakeLists.txt  build.sh
static_analysis/cmake/: clang-format.cmake  cppcheck.cmake
static_analysis/project1/: CMakeLists.txt  main1.cpp
static_analysis/project2/: CMakeLists.txt  main2.cpp
template_polymorphism/: CMakeLists.txt  build.sh  test.conf
template_polymorphism/include/: animal.h  cat.h  dog.h
template_polymorphism/src/: cat.cpp  dog.cpp  main.cpp
